# SrvcFlo

./: .gitignore  .mcp.json  DEVELOPMENT_PLAN_SESSION1.md  PRIVACY_POLICY.md  README.md  Security-Scanner.md  Sonic_Logo.ai  TERMS_OF_SERVICE.md  TESTNET_PAYMENT_FIX_REPORT.md  UI-Polisher.md  blog_post_strat.md  blog_post_strat_2.md  blog_post_strat_3.md  blog_post_strat_4.md  claude.md  cloudflare-deployment-guide.md  cloudflare-inft-implementation-summary.md  cloudflare-inft-migration-plan.md  complete_setup_guide.md  delete_agnoenv.bat  deployment-guide.md  development_plan.md  inft-cloudflare-update-instructions.md  investigate-frontend.html  investigate-localhost.js  layout_v1.tsx  manual-screenshot.html  newestupdate.md  package-lock.json  package.json  page_v1.tsx  price_ticker_v1.tsx  requirements.txt  run-tests.js  serviceflow_progress.md  setup-stripe-products.js  spec-lite.md  tech-stack.md  test-frontend-api.js  test-gemini-direct.js  (+3 more)
agent-ui/: .env.example  .gitignore  .railwayignore  DISCORD_SETUP.md  DISCORD_SETUP_GUIDE.md  Dockerfile  GEMINI.md  RAILWAY_DEPLOYMENT.md  README.md  SECURITY_CHECKLIST.md  TESTING_GUIDE.md  components.json  discord_pin_message.md  final-integration-test.js  hardhat.config.js  network-monitor.js  next.config.js  nixpacks.toml  package-lock.json  package.json  playground.py  push-to-github.bat  pyproject.toml  railway.json  requirements.txt  simple-test.js  start-agent-ui.sh  start-playground.bat  start-playground.ps1  tailwind.config.ts  temp_page.tsx  test-background-fix.js  test_final_configuration.py  test_integration.py  trigger.config.ts
agent-ui/Agents/: __init__.py  admin_verification_agent.py  agno_assist.py  agno_assist_simple.py  auditooor_agent.py  auth_bridge_agent.py  building_code_agent.py  (+54 more)
(+860 files in other folders)
