[project]
name = "serviceflow-agent-ui"
version = "0.1.0"
description = "ServiceFlow AI Agent-UI Backend System"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv",
    "agno",
    "uvicorn[standard]",
    "fastapi",
    "schedule",
    "google-api-python-client>=2.176.0",
    "google-auth-httplib2>=0.2.0",
    "google-auth-oauthlib>=1.2.2",
    "beautifulsoup4",
    "spider-client",
    "tweepy",
    "requests",
    "charset-normalizer",
    "pymongo>=4.13.2",
    "nest-asyncio>=1.6.0",
    "pathlib>=1.0.1",
    "chardet>=5.2.0",
    "flask>=3.1.1",
    "flask-cors>=6.0.1",
    "discord.py>=2.3.0",
    "aiohttp",
    "langfuse",
    "openai",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"